<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/wintec_marae"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-50dp"
            app:srcCompat="@drawable/wintecmarae"
            android:contentDescription="@string/wintec_marae_image" />

        <TextView
            android:id="@+id/textView_about"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_below="@+id/imageView1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-70dp"
            android:text="@string/wintec_marae_body"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_moreinfo"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_about"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="60dp"
            android:text="@string/info"
            android:textColor="#FF0000"
            android:textSize="20sp" />

    </RelativeLayout>
</ScrollView>