<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <VideoView
            android:id="@+id/song_display"
            android:layout_width="match_parent"
            android:layout_height="366dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/harder"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/harder_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/easier"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:clickable="false"
        android:shadowColor="#FFFFFF"
        android:text="@string/easier_button_text"
        android:textColor="@color/colorGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/current_diff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/current_diff"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/harder"
        app:layout_constraintStart_toEndOf="@+id/easier"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/help_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="38dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:text="@string/string"
        android:textColor="#FF0000"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/current_diff"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ScrollView
        android:id="@+id/scrollView2"
        style="@android:style/Widget.Material.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideInset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easier">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="4pt"
            android:paddingEnd="4pt">

            <TextView
                android:id="@+id/lyrics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/lyrics_placeholder"
                app:layout_constraintTop_toBottomOf="@+id/diff_help"
                tools:layout_editor_absoluteX="2dp" />

            <TextView
                android:id="@+id/diff_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/diff_help"
                android:textColor="#DA3636"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />


            <Button
                android:id="@+id/change_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_language"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lyrics"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.842"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lyrics" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>